// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sc-bxivhb gIwMIC"
  >
    <div>
      <div
        className="sc-htpNat jHFNJI"
      />
      
    </div>
  </div>
</span>
`;

exports[`When using snapshots with a label prop Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sc-bxivhb gIwMIC"
  >
    <div>
      <div
        className="sc-htpNat jHFNJI"
      />
      <div
        className="sc-ifAKCX hlQgNG"
      >
        This is a label
      </div>
    </div>
  </div>
</span>
`;
